--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,11 @@ plugins {
     id 'org.springframework.boot' version '3.3.4'
     id 'io.spring.dependency-management' version '1.1.6'
 }
+
+ext {
     group = 'com.team1'
     version = '0.0.2-SNAPSHOT'
-
+}
 
 java {
     toolchain {
