관리자 페이지 회원 목록

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,7 @@ spring:
         active: dev
         include: local
     thymeleaf:
+        cache: false
         prefix: classpath:/templates/
     mail:
         host: smtp.gmail.com
