--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -3,12 +3,18 @@ spring:
     url: jdbc:mysql://43.200.191.196:3306/lotteon
     username: root
     password: "qwer1234!Q"
+    hikari:
+      maximum-pool-size: 4
+      minimum-idle: 2
+      connection-timeout: 10000
   jpa:
     hibernate:
       ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
+        show_sql: false
+        format_sql: false
   servlet:
     multipart:
       location: uploads/
