feat: redis 캐싱 설정

--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation 'jakarta.validation:jakarta.validation-api:3.0.0'
     implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'
 
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 jar {
     enabled = false
