--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -20,6 +20,9 @@ spring:
           auth: true
           starttls:
             enable: true
+  cache:
+    redis:
+      time-to-live: 1800000
   data:
     redis:
       host: asd
